--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,5 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pheliz Agencies Real Estate</title>
     <!--icon scout cdn-->
-
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/style.css"/>
+    <!--swiper cdn-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   </head>
+  <body>
+    <nav>
+      <div class="container nav__container">
+        <a href="index.html"><h4>Pheliz Agencies</h4></a>
+        <ul class="nav__menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <button id="open-menu-btn"><i class="uil uil-list-ul"></i></button>
+        <button id="close-menu-btn"><i class="uil uil-times"></i></button>
+      </div>
+    </nav>
+    <header>
+      <div class="container header__container">
+        <div class="header__left">
+          <h1>Work with us to get the best of your housing needs</h1>
+          <p>We are a housing and real estate agents based in Kisumu - Kenya.</p>
+          <a href="services.html" class="btn btn-primary">GET STARTED</a>
+        </div>
+        <div class="header__right">
+          <div class="header__right-image">
+          <!--<img src=""-->
+        </div>
+      </div>
+    </header>
+    <section class="categories"></section>
+  </body>
