--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pheliz Agencies Real Estate</title>
+    <title>Pheliz Investment</title>
     <!--icon scout cdn-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -18,7 +18,7 @@
   <body>
     <nav>
       <div class="container nav__container">
-        <a href="index.html"><h4>Pheliz Agencies</h4></a>
+        <a href="index.html"><h4>Pheliz Investment</h4></a>
         <ul class="nav__menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -32,8 +32,8 @@
     <header>
       <div class="container header__container">
         <div class="header__left">
-          <h1>Work with us to get the best of your housing needs</h1>
-          <p>We are a housing and real estate agents based in Kisumu - Kenya.</p>
+          <h1>Work with us to get the best of your cyber cafe and stationary needs</h1>
+          <p>We are a cyber cafe and stationary store based in the heart of Kisumu CBD.</p>
           <a href="services.html" class="btn btn-primary">GET STARTED</a>
         </div>
         <div class="header__right">
@@ -42,5 +42,132 @@
         </div>
       </div>
     </header>
-    <section class="categories"></section>
+    <section class="categories">
+      <div class="container categories__container">
+        <div class="categories__left">
+          <h1>What we do</h1>
+          <p>We are a very categorical in what we offer and these are some of our Featured cyber cafe and stationary services</p>
+          <a href="#" class="btn">Learn More</a>
+        </div>
+        <div class="categories__right">
+          <article class="category">
+            <span class="category__icon"><i class="uil uil-building"></i></span>
+            <h5>cyber cafe service</h5>
+            <p>Go above and beyond to boost your online services today by partnering with us.</p>
+          </article>
+          <article class="category">
+            <span class="category__icon"><i class="uil uil-link"></i></span>
+            <h5>Internet Access</h5>
+            <p>We offer internet service such as browsing the web, check emails, and chat online etc. To our beloved customers country wide. Our fees and terms are very friendly. Welcome All</p>
+          </article>
+          <article class="category">
+            <span class="category__icon"><i class="uil uil-megaphone"></i></span>
+            <h5>Computer rental</h5>
+            <p>We also offer computer rental for those who do not have their own at an agreeable terms for a short period of time</p>
+          </article>
+          <article class="category">
+            <span class="category__icon"><i class="uil uil-sorting"></i></span>
+            <h5>Stationary</h5>
+            <p>We also sell all stionary items to our customers. We have a wide range of stationary products to choose from.</p>
+          </article>
+          <article class="category">
+            <span class="category__icon"><i class="uil uil-home"></i></span>
+            <h5>Printing & Scanning</h5>
+            <p>We also offer printing and scanning services to our customers. We have a wide range of printing services to choose from.</p>
+          </article>
+          <article class="category">
+            <span class="category__icon"><i class="uil uil-user-md"></i></span>
+            <h5>Software installation</h5>
+            <p>We also offer software installation, development and bug detection services to our customers. We have a wide range of softwares services to choose from.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="faqs">
+      <h2>Frequently Asked Questions</h2>
+      <container class="faqs__container">
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="question__answer"></div>
+          <h4>What is the price of your services?</h4>
+          <p>Our prices are very friendly and affordable. We have a wide range of services to choose from. You can check our services page for more information.</p>
+        </article>
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="question__answer"></div>
+          <h4>What are your opening hours?</h4>
+          <p>We are open from 8:00am to 6:00pm from Monday to Sunday including all public holidays.</p>
+        </article>
+        <article class="faq">
+          <div class="faq__icon"><i class="uil uil-plus"></i></div>
+          <div class="question__answer"></div>
+          <h4>Where are your located?</h4>
+          <p>We are located in the heart of Kisumu CBD opposite KPLC offices in Lake market door number 1. You can check our contact page for more information.</p>
+        </article>
+      </container>
+    </section>
+
+    <section class="container testimonials__container mySwiper">
+      <h2> Happy clients testimonials</h2>
+      <div class="swiper-wrapper">
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="images/avatar1.jpg" alt="avatar1"/>
+          </div>
+          <div class="testimonial__info">
+            <h5>Enock Ochieng Josko</h5>
+            <small>Client</small>
+          </div>
+          <div class="testimonial__body">
+            <p>Pheliz Investment is the best cyber cafe and stationary store in Kisumu. I have been a client for the past 5 years and I have never been disappointed. I highly recommend them to anyone looking for cyber cafe and stationary services.</p>
+          </div>
+        </article>
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="images/avatar.jpg" alt="avatar"/>
+          </div>
+          <div class="testimonial__info">
+            <h5>Catherine Angir</h5>
+            <small>Client</small>
+          </div>
+          <div class="testimonial__body">
+            <p>Pheliz Investment is a lifesaver! Clean, fast internet, and friendly staff.</p>
+          </div>
+        </article>
+
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="images/avatar2.jpg" alt="avatar2"/>
+          </div>
+          <div class="testimonial__info">
+            <h5>Elizabeth Mwanda</h5>
+            <small>Client</small>
+          </div>
+          <div class="testimonial__body">
+            <p>The perfect place to ctach up on work, and browse the web.</p>
+          </div>
+        </article>
+      </div>
+      <div class="swiper-pagination"></div>
+    </section>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="/JavaScript/main.js"></script>
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        breakpoints: {
+          600: {
+            slidesPerView: 2,
+          },
+        }
+    });
+    </script>
   </body>
+</html>
