--- a/HTML/index.html
+++ b/HTML/index.html
@@ -112,7 +112,7 @@
       <div class="swiper-wrapper">
         <article class="testimonial swiper-slide">
           <div class="avatar">
-            <img src="images/avatar1.jpg" alt="avatar1"/>
+            <img src="images/avatar.jpg" alt="avatar1"/>
           </div>
           <div class="testimonial__info">
             <h5>Enock Ochieng Josko</h5>
@@ -125,10 +125,10 @@
 
         <article class="testimonial swiper-slide">
           <div class="avatar">
-            <img src="images/avatar.jpg" alt="avatar"/>
+            <img src="images/avatar1.jpg" alt="avatar"/>
           </div>
           <div class="testimonial__info">
-            <h5>Catherine Angir</h5>
+            <h5>Elizabeth Oyugi</h5>
             <small>Client</small>
           </div>
           <div class="testimonial__body">
@@ -141,11 +141,11 @@
             <img src="images/avatar2.jpg" alt="avatar2"/>
           </div>
           <div class="testimonial__info">
-            <h5>Elizabeth Mwanda</h5>
+            <h5>Brendah Chepngeno</h5>
             <small>Client</small>
           </div>
           <div class="testimonial__body">
-            <p>The perfect place to ctach up on work, and browse the web.</p>
+            <p>The perfect place to catch up on work, and browse the web.</p>
           </div>
         </article>
       </div>
