team members about

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -34,7 +34,39 @@
         </div>
         <div class="about__achievement-right">
           <h1>Achievements</h1>
-          <p></p>
+          <p>Kisumu community award for outstanding customer service</p>
+          <div class="achievements__cards">
+            <article class="achievement__card">
+              <span class="achievement__icon">
+                <i class="uil uil-house-user"></i>
+              </span>
+              <h3>400+</h3>
+              <p>Happy Customers</p>
+            </article>
+            <article class="achievement__card">
+              <span class="achievement__icon">
+                <i class="uil uil-award"></i>
+              </span>
+              <h3>3</h3>
+              <p>Years of Service</p>
+            </article>
+            <article class="achievement__card">
+              <span class="achievement__icon">
+                <i class="uil uil-users-alt"></i>
+              </span>
+              <h3>70+</h3>
+              <p>Mbps</p>
+            </article>
+          </div>
         </div>
+      </div>
+    </section>
+    <section class="team">
+      <h2>Meet our team</h2>
+      <div class="container team__container">
+        <article class="team__member">
+          <img src="images/philip.png">
+          <h3>Philip Obuya</h3>
+          <p>Director</p>
       </div>
     </section>
