--- a/HTML/about.html
+++ b/HTML/about.html
@@ -65,8 +65,41 @@
       <h2>Meet our team</h2>
       <div class="container team__container">
         <article class="team__member">
-          <img src="images/philip.png">
-          <h3>Philip Obuya</h3>
-          <p>Director</p>
+          <div class="team__member-image">
+            <img src="/images/philip.png" alt="">
+          </div>
+          <div class="team__member-info">
+            <h4>Philip Obuya</h4>
+            <p>Director - <a href="tell:+254724 873929">Call Director</a></p>
+          </div>
+        </article>
+
+        <article class="team__member">
+          <div class="team__member-image">
+            <img src="/images/nimba.png" alt="">
+          </div>
+          <div class="team__member-info">
+            <h4>Nimba Oyugi</h4>
+            <p>Software Engineer - <a href="tell:+254746 133309">Call for Software inquiries</a></p>
+          </div>
+          <div class="team__member - social">
+            <a href="https://github.com/nimba005" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.twitter.com/nimbajohn" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/nimba-eric-john/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </article>
+
+        <article class="team__member">
+          <div class="team__member-image">
+            <img src="/images/helen.png" alt="">
+          </div>
+          <div class="team__member-info">
+            <h4>Hellen Obuya</h4>
+            <p>Director - <a href="tell:+254727 781856">Call for Software inquiries</a></p>
+          </div>
+        </article>
       </div>
     </section>
+    <script src="/JavaScript/main.js"></script>
+  </body>
+</html>
