--- a/HTML/index.html
+++ b/HTML/index.html
@@ -112,7 +112,7 @@
       <div class="swiper-wrapper">
         <article class="testimonial swiper-slide">
           <div class="avatar">
-            <img src="images/avatar.jpg" alt="avatar1"/>
+            <img src="images/pic-person-02.jpg" alt="avatar1"/>
           </div>
           <div class="testimonial__info">
             <h5>Enock Ochieng Josko</h5>
