--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,14 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pheliz Investment</title>
   <!-- Icon Scout CDN -->
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
-  <!-- Swiper CDN -->
+  <link rel="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <!-- swipe CDN -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
   <nav>
@@ -33,13 +32,13 @@
   <header>
     <div class="container header__container">
       <div class="header__left">
-        <h1>Work with us to get the best of your cyber cafe and stationary needs</h1>
-        <p>We are a cyber cafe and stationary store based in the heart of Kisumu CBD.</p>
-        <a href="services.html" class="btn btn-primary">GET STARTED</a>
+        <h1>Work with us to get the best of your online services and stationaries</h1>
+        <p>Pheliz Investment is a company that deals with online services and stationaries. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
+        <a href="contact.html" class="btn">Contact Us</a>
       </div>
       <div class="header__right">
         <div class="header__right-image">
-          <img src="images/home-background.jpg" alt="Pheliz Investment Background Image">
+          <img src="images/home-background.png" alt="Pheliz Investment Bacground Image">
         </div>
       </div>
     </div>
@@ -47,138 +46,70 @@
 
   <section class="categories">
     <div class="container categories__container">
-      <div class="categories__left">
+      <div class="category__left">
         <h1>What we do</h1>
-        <p>We are very categorical in what we offer and these are some of our featured cyber cafe and stationary services.</p>
+        <p>Pheliz Investment is a company that deals with online services and stationaries. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
         <a href="#" class="btn">Learn More</a>
       </div>
       <div class="categories__right">
         <article class="category">
-          <span class="category__icon"><i class="uil uil-building"></i></span>
-          <h5>Cyber Cafe Service</h5>
-          <p>Go above and beyond to boost your online services today by partnering with us.</p>
+          <span class="category__icon"><i class="uil uil-globe"></i></span>
+          <h3>Online Services</h3>
+          <p>Get the best of your online services with us. We are here to help you get the best of your online services:
+            scanning and printing, online marketing, website development, and many more.
+          </p>
         </article>
         <article class="category">
-          <span class="category__icon"><i class="uil uil-link"></i></span>
-          <h5>Internet Access</h5>
-          <p>We offer internet services such as browsing the web, checking emails, and chatting online. Our fees and terms are very friendly. Welcome all.</p>
+          <span class="category__icon"><i class="uil uil-pen"></i></span>
+          <h3>Stationaries</h3>
+          <p>Get the best of your stationaries with us. We are here to help you get the best of your stationaries</p>
         </article>
         <article class="category">
-          <span class="category__icon"><i class="uil uil-megaphone"></i></span>
-          <h5>Computer Rental</h5>
-          <p>We offer computer rentals for those who do not have their own, with agreeable terms for a short period of time.</p>
-        </article>
-        <article class="category">
-          <span class="category__icon"><i class="uil uil-sorting"></i></span>
-          <h5>Stationary</h5>
-          <p>We sell all stationary items to our customers, offering a wide range of products to choose from.</p>
-        </article>
-        <article class="category">
-          <span class="category__icon"><i class="uil uil-home"></i></span>
-          <h5>Printing & Scanning</h5>
-          <p>We provide printing and scanning services with a wide range of options to choose from.</p>
-        </article>
-        <article class="category">
-          <span class="category__icon"><i class="uil uil-user-md"></i></span>
-          <h5>Software Installation</h5>
-          <p>We offer software installation, development, and bug detection services with a wide range of software options.</p>
+          <span class="category__icon"><i class="uil uil-credit-card"></i></span>
+          <h3>Software Installation</h3>
+          <p>We offer software Installation, development and bug detection services at the top notch</p>
         </article>
       </div>
     </div>
   </section>
 
   <section class="faqs">
-    <h2>Frequently Asked Questions</h2>
-    <div class="container faqs__container">
+    <h2>Frequently asked questions</h2>
+    <div class="faqs__container">
       <article class="faq">
-        <div class="faq__icon"><i class="uil uil-plus"></i></div>
+        <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
         <div class="question__answer">
-          <h4>What is the price of your services?</h4>
-          <p>Our prices are very friendly and affordable. We have a wide range of services to choose from. Check our services page for more information.</p>
+          <h3>What is Pheliz Investment?</h3>
+          <p>Pheliz Investment is a company that deals with online services and stationaries. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
         </div>
       </article>
       <article class="faq">
-        <div class="faq__icon"><i class="uil uil-plus"></i></div>
+        <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
         <div class="question__answer">
-          <h4>What are your opening hours?</h4>
-          <p>We are open from 8:00 am to 6:00 pm, Monday to Sunday, including all public holidays.</p>
+          <h3>What services do you offer?</h3>
+          <p>We offer online services, stationaries, software installation, and many more. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
         </div>
       </article>
       <article class="faq">
-        <div class="faq__icon"><i class="uil uil-plus"></i></div>
+        <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
         <div class="question__answer">
-          <h4>Where are you located?</h4>
-          <p>We are located in the heart of Kisumu CBD, opposite KPLC offices in Lake Market, door number 1. Check our contact page for more information.</p>
+          <h3>Where are you located?</h3>
+          <p>Our offices are located at the heart of Kisumu CBD. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
+        </div>
+      </article>
+      <article class="faq">
+        <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
+        <div class="question__answer">
+          <h3>How can I contact you?</h3>
+          <p>You can contact us through our email address or phone number. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
+        </div>
+      </article>
+      <article class="faq">
+        <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
+        <div class="question__answer">
+          <h3>How can I get your services?</h3>
+          <p>You can get our services by visiting our offices or contacting us through our email address or phone number. We are open from 8:00 am to 7:00 pmm, Sunday to Sunday</p>
         </div>
       </article>
     </div>
   </section>
-
-  <section class="container testimonials__container mySwiper">
-    <h2>Happy Clients' Testimonials</h2>
-    <div class="swiper-wrapper">
-      <article class="testimonial swiper-slide">
-        <div class="avatar">
-          <img src="images/pic-person-02.jpg" alt="Avatar of Enock Ochieng Josko">
-        </div>
-        <div class="testimonial__info">
-          <h5>Enock Ochieng Josko</h5>
-          <small>Client</small>
-        </div>
-        <div class="testimonial__body">
-          <p>Pheliz Investment is the best cyber cafe and stationary store in Kisumu. I have been a client for the past 5 years and have never been disappointed. I highly recommend them to anyone looking for cyber cafe and stationary services.</p>
-        </div>
-      </article>
-
-      <article class="testimonial swiper-slide">
-        <div class="avatar">
-          <img src="images/avatar1.jpg" alt="Avatar of Elizabeth Oyugi">
-        </div>
-        <div class="testimonial__info">
-          <h5>Elizabeth Oyugi</h5>
-          <small>Client</small>
-        </div>
-        <div class="testimonial__body">
-          <p>Pheliz Investment is a lifesaver! Clean, fast internet, and friendly staff.</p>
-        </div>
-      </article>
-
-      <article class="testimonial swiper-slide">
-        <div class="avatar">
-          <img src="images/avatar2.jpg" alt="Avatar of Brendah Chepngeno">
-        </div>
-        <div class="testimonial__info">
-          <h5>Brendah Chepngeno</h5>
-          <small>Client</small>
-        </div>
-        <div class="testimonial__body">
-          <p>The perfect place to catch up on work and browse the web.</p>
-        </div>
-      </article>
-    </div>
-    <div class="swiper-pagination"></div>
-  </section>
-
-  <footer>
-    <p>&copy; Pheliz Investment 2024</p>
-  </footer>
-
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="JavaScript/main.js"></script>
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 1,
-      spaceBetween: 30,
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      breakpoints: {
-        600: {
-          slidesPerView: 2,
-        },
-      },
-    });
-  </script>
-</body>
-</html>
