--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="/css/contact.css">
     <link rel="stylesheet" href="/css/style.css"/>
     <!--swiper cdn-->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
@@ -23,6 +23,7 @@
             <ul class="nav__menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <button id="open-menu-btn"><i class="uil uil-list-ul"></i></button>
@@ -33,7 +34,7 @@
         <div class="container contact__container">
             <aside class="contact__aside">
                 <div class="aside__image">
-                    <img src="images/contactus.jpg" alt="contact image">
+                    <img src="/images/contactus.jpg" alt="contact image">
                 </div>
                 <h2>Contact Us</h2>
                 <p>Feel free to reach out to us for any inquiries or questions you may have.</p>
