--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="header__right">
         <div class="header__right-image">
-          <img src="images/home-background.png" alt="Pheliz Investment Bacground Image">
+          <img src="/images/home-background.png" alt="Pheliz Investment Bacground Image">
         </div>
       </div>
     </div>
@@ -75,26 +75,26 @@
   </section>
 
   <section class="faqs">
-    <h2>Frequently asked questions</h2>
+    <h4>Frequently asked questions</h4>
     <div class="faqs__container">
       <article class="faq">
         <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
         <div class="question__answer">
-          <h3>What is Pheliz Investment?</h3>
+          <h5>What is Pheliz Investment?</h5>
           <p>Pheliz Investment is a company that deals with online services and stationaries. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
         </div>
       </article>
       <article class="faq">
         <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
         <div class="question__answer">
-          <h3>What services do you offer?</h3>
+          <h5>What services do you offer?</h5>
           <p>We offer online services, stationaries, software installation, and many more. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
         </div>
       </article>
       <article class="faq">
         <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
         <div class="question__answer">
-          <h3>Where are you located?</h3>
+          <h5>Where are you located?</h5>
           <p>Our offices are located at the heart of Kisumu CBD. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
         </div>
       </article>
@@ -108,7 +108,7 @@
       <article class="faq">
         <div class="faq__icon"><i class="uil uil-question-circle"></i></div>
         <div class="question__answer">
-          <h3>How can I get your services?</h3>
+          <h5>How can I get your services?</h5>
           <p>You can get our services by visiting our offices or contacting us through our email address or phone number. We are open from 8:00 am to 7:00 pmm, Sunday to Sunday</p>
         </div>
       </article>
@@ -116,14 +116,14 @@
   </section>
 
   <section class="container testimonials__container mySwiper">
-    <h2>Happy Clients' Testimonials</h2>
+    <h4>Happy Clients' Testimonials</h4>
     <div class="swipe-wrapper">
       <article class="testimonial swiper-slide">
         <div class="avatar">
           <img src="/images/enock.jpg" alt="Enock Ochieng Josko">
         </div>
         <div class="testimonial__info">
-          <h3>Enock Ochieng Josko</h3>
+          <h5>Enock Ochieng Josko</h5>
           <small>Client</small>
         </div>
         <div class="testimonial__body">
@@ -136,7 +136,7 @@
           <img src="/images/elizabeth.jpg" alt="Elizabeth Oyugi">
         </div>
         <div class="testimonial__info">
-          <h3>Elizabeth Oyugi</h3>
+          <h5>Elizabeth Oyugi</h5>
           <small>Client</small>
         </div>
         <div class="testimonial__body">
@@ -149,7 +149,7 @@
           <img src="/images/brendah.jpg" alt="Brendah Chepngeno">
         </div>
         <div class="testimonial__info">
-          <h3>Brendah Chepngeno</h3>
+          <h5>Brendah Chepngeno</h5>
           <small>Client</small>
         </div>
         <div class="testimonial__body">
