--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,101 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pheliz Investment</title>
-    <!--icon scout cdn-->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="/css/about.css"/>
-  </head>
-  <body>
-    <nav>
-      <div class="container nav__container">
-        <a href="index.html"><h4>Pheliz Investment</h4></a>
-        <ul class="nav__menu">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pheliz Investment - About Us</title>
+  <!--icon scout cdn-->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="/css/style.css"/>
+  <link rel="stylesheet" href="/css/about.css"/>
+</head>
+<body>
+  <nav>
+    <div class="container nav__container">
+      <a href="index.html"><h4>Pheliz Investment</h4></a>
+      <ul class="nav__menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-        <button id="open-menu-btn"><i class="uil uil-list-ul"></i></button>
-        <button id="close-menu-btn"><i class="uil uil-times"></i></button>
+      </ul>
+      <button id="open-menu-btn"><i class="uil uil-list-ul"></i></button>
+      <button id="close-menu-btn"><i class="uil uil-times"></i></button>
+    </div>
+  </nav>
+  
+  <section class="about__achievements">
+    <div class="cointaner about__achievements-container">
+      <div class="about__achievements-left">
+        <img src="/images/image.png" alt="Pheliz Investment Achievements">
       </div>
-    </nav>
-    <section class="about__achievements">
-      <div class="cointaner about__achievements-container">
-        <div class="about__achievements-left">
-          <img src="images/image.png">
-        </div>
-        <div class="about__achievements-right">
-          <h1>Achievements</h1>
-          <p>Kisumu community award for outstanding customer service</p>
-          <div class="achievements__cards">
-            <article class="achievement__card">
-              <span class="achievement__icon">
-                <i class="uil uil-house-user"></i>
-              </span>
-              <h3>400+</h3>
-              <p>Happy Customers</p>
-            </article>
-            <article class="achievement__card">
-              <span class="achievement__icon">
-                <i class="uil uil-award"></i>
-              </span>
-              <h3>3</h3>
-              <p>Years of Service</p>
-            </article>
-            <article class="achievement__card">
-              <span class="achievement__icon">
-                <i class="uil uil-users-alt"></i>
-              </span>
-              <h3>70+</h3>
+      <div class="about__achievements-right">
+        <h1>Achievements</h1>
+        <p>Kisumu community award for outstanding customer service</p>
+        <div class="achievements__cards">
+          <article class="achievement__card">
+            <span class="achievement__icon">
+              <i class="uil uil-house-user"></i>
+            </span>
+            <h4>400+</h4>
+            <p>Happy Customers</p>
+          </article>
+          <article class="achievement__card">
+            <span class="achievement__icon">
+              <i class="fas fa-trophy"></i>
+            </span>
+            <h4>10+</h4>
+            <p>Years of Service</p>
+          </article>
+          <article class="achievement__card">
+            <span class="achievement__icon">
+              <i class="uil uil-users-alt"></i>
+            </span>
+            <h4>70+</h4>
               <p>Mbps</p>
-            </article>
-          </div>
+          </article>
         </div>
       </div>
-    </section>
-    <section class="team">
-      <h2>Meet our team</h2>
-      <div class="container team__container">
-        <article class="team__member">
-          <div class="team__member-image">
-            <img src="/images/philip.png" alt="">
-          </div>
-          <div class="team__member-info">
-            <h4>Philip Obuya</h4>
-            <p>Director - <a href="tell:+254724 873929">Call Director</a></p>
-          </div>
-        </article>
+    </div>
+  </section>
+  <section class="team">
+    <h2>Meet our team</h2>
+    <div class="container team__container">
+      <article class="team__member">
+        <div class="team__member-image">
+          <img src="/images/philip.png" alt="Philip Obuya">
+        </div>
+        <div class="team__member-info">
+          <h4>Philip Obuya</h4>
+          <p>Director - <a href="tell:+254724 873929">Call Director</a></p>
+        </div>
+      </article>
 
-        <article class="team__member">
-          <div class="team__member-image">
-            <img src="/images/nimba.png" alt="">
-          </div>
-          <div class="team__member-info">
-            <h4>Nimba Oyugi</h4>
-            <p>Software Engineer - <a href="tell:+254746 133309">Call for Software inquiries</a></p>
-          </div>
-          <div class="team__member - social">
-            <a href="https://github.com/nimba005" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.twitter.com/nimbajohn" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/nimba-eric-john/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          </div>
-        </article>
+      <article class="team__member">
+        <div class="team__member-image">
+          <img src="/images/nimba.png" alt="Nimba Oyugi">
+        </div>
+        <div class="team__member-info">
+          <h4>Nimba Oyugi</h4>
+          <p>Software Engineer - <a href="tell:+254746 133309">Call for Software inquiries</a></p>
+        </div>
+        <div class="team__member - social">
+          <a href="https://github.com/nimba005" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+          <a href="https://www.twitter.com/nimbajohn" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/nimba-eric-john/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </article>
 
-        <article class="team__member">
-          <div class="team__member-image">
-            <img src="/images/helen.png" alt="">
-          </div>
+      <article class="team__member">
+        <div class="team__member-image">
+          <img src="/images/helen.png" alt="Helen Obuya">
+        </div>
           <div class="team__member-info">
             <h4>Hellen Obuya</h4>
-            <p>Director - <a href="tell:+254727 781856">Call for Software inquiries</a></p>
+            <p>Director - <a href="tell:+254727 781856">Call for inquiries</a></p>
           </div>
         </article>
       </div>
