--- a/HTML/about.html
+++ b/HTML/about.html
@@ -30,7 +30,7 @@
   </nav>
   
   <section class="about__achievements">
-    <div class="cointaner about__achievements-container">
+    <div class="container about__achievements-container">
       <div class="about__achievements-left">
         <img src="/images/image.png" alt="Pheliz Investment Achievements">
       </div>
