--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav>
     <div class="container nav__container">
-      <a href="index.html"><h1>Pheliz Investment</h1></a>
+      <a href="index.html"><h1>PHELIZ INVESTMENT</h1></a>
       <ul class="nav__menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -118,7 +118,7 @@
   <section class="container testimonials__container mySwiper">
     <h4>Happy Clients' Testimonials</h4>
     <div class="swipe-wrapper">
-      <article class="testimonial swiper-slide">
+      <article class="testimonial">
         <div class="avatar">
           <img src="/images/enock.jpg" alt="Enock Ochieng Josko">
         </div>
@@ -131,7 +131,7 @@
         </div>
       </article>
 
-      <article class="testimonial swiper-slide">
+      <article class="testimonial">
         <div class="avatar">
           <img src="/images/elizabeth.jpg" alt="Elizabeth Oyugi">
         </div>
@@ -144,7 +144,7 @@
         </div>
       </article>
 
-      <article class="testimonial swiper-slide">
+      <article class="testimonial">
         <div class="avatar">
           <img src="/images/brendah.jpg" alt="Brendah Chepngeno">
         </div>
@@ -159,6 +159,7 @@
     </div>
     <div class="swiper-pagination"></div>
   </section>
+
   <footer>
     <p>&copy; Pheliz Investment 2024</p>
   </footer>
