--- a/HTML/about.html
+++ b/HTML/about.html
@@ -48,9 +48,8 @@
           <article class="achievement__card">
             <span class="achievement__icon">
               <i class="fas fa-trophy"></i>
+              <span>Years of Service: 10</span>
             </span>
-            <h4>10+</h4>
-            <p>Years of Service</p>
           </article>
           <article class="achievement__card">
             <span class="achievement__icon">
