--- a/HTML/about.html
+++ b/HTML/about.html
@@ -53,7 +53,7 @@
           </article>
           <article class="achievement__card">
             <span class="achievement__icon">
-              <i class="uil uil-users-alt"></i>
+              <i class="uil uil-globe"></i>
             </span>
             <h4>70+</h4>
               <p>Mbps</p>
