--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="/css/contact.css">
-  <link rel="stylesheet" href="/css/style.css"/>
+  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/style.css"/>
   <!--swiper CDN -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -35,7 +35,7 @@
     <div class="container contact__container">
       <aside class="contact__aside">
         <div class="aside__image">
-          <img src="/images/contactus.jpg" alt="Contact Us">
+          <img src="images/contactus.jpg" alt="Contact Us">
         </div>
         <h2>Contact Us</h2>
         <p>Feel free to reach out to us for any inquiries or questions you may have.</p>
@@ -77,6 +77,6 @@
     </div>
   </section>
   
-  <script src="/JavaScript/main.js"></script>
+  <script src="JavaScript/main.js"></script>
 </body>
 </html>
