--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="/css/style.css"/>
-  <link rel="stylesheet" href="/css/about.css"/>
+  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/about.css"/>
 </head>
 <body>
   <nav>
@@ -32,7 +32,7 @@
   <section class="about__achievements">
     <div class="container about__achievements-container">
       <div class="about__achievements-left">
-        <img src="/images/image.png" alt="Pheliz Investment Achievements">
+        <img src="images/image.png" alt="Pheliz Investment Achievements">
       </div>
       <div class="about__achievements-right">
         <h1>Achievements</h1>
@@ -67,7 +67,7 @@
     <div class="container team__container">
       <article class="team__member">
         <div class="team__member-image">
-          <img src="/images/philip.png" alt="Philip Obuya">
+          <img src="images/philip.png" alt="Philip Obuya">
         </div>
         <div class="team__member-info">
           <h4>Philip Obuya</h4>
@@ -77,7 +77,7 @@
 
       <article class="team__member">
         <div class="team__member-image">
-          <img src="/images/nimba.png" alt="Nimba Oyugi">
+          <img src="images/nimba.png" alt="Nimba Oyugi">
         </div>
         <div class="team__member-info">
           <h4>Nimba Oyugi</h4>
@@ -92,7 +92,7 @@
 
       <article class="team__member">
         <div class="team__member-image">
-          <img src="/images/helen.png" alt="Helen Obuya">
+          <img src="images/helen.png" alt="Helen Obuya">
         </div>
           <div class="team__member-info">
             <h4>Hellen Obuya</h4>
@@ -101,6 +101,6 @@
         </article>
       </div>
     </section>
-    <script src="/JavaScript/main.js"></script>
+    <script src="JavaScript/main.js"></script>
   </body>
 </html>
