--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="swipe-wrapper">
       <article class="testimonial">
         <div class="avatar">
-          <img src="/images/enock.jpg" alt="Enock Ochieng Josko">
+          <img src="images/enock.jpg" alt="Enock Ochieng Josko">
         </div>
         <div class="testimonial__info">
           <h5>Enock Ochieng Josko</h5>
@@ -133,7 +133,7 @@
 
       <article class="testimonial">
         <div class="avatar">
-          <img src="/images/elizabeth.jpg" alt="Elizabeth Oyugi">
+          <img src="images/elizabeth.jpg" alt="Elizabeth Oyugi">
         </div>
         <div class="testimonial__info">
           <h5>Elizabeth Oyugi</h5>
@@ -146,7 +146,7 @@
 
       <article class="testimonial">
         <div class="avatar">
-          <img src="/images/brendah.jpg" alt="Brendah Chepngeno">
+          <img src="images/brendah.jpg" alt="Brendah Chepngeno">
         </div>
         <div class="testimonial__info">
           <h5>Brendah Chepngeno</h5>
