--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="category__left">
         <h1>What we do</h1>
         <p>Pheliz Investment is a company that deals with online services and stationaries. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
-        <a href="#" class="btn">Learn More</a>
+        <a href="services.html" class="btn" id="learnMore">Learn More</a>
       </div>
       <div class="categories__right">
         <article class="category">
