--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="header__right">
         <div class="header__right-image">
-          <img src="/images/home-background.png" alt="Pheliz Investment Bacground Image">
+          <img src="images/home-background.png" alt="Pheliz Investment Bacground Image">
         </div>
       </div>
     </div>
