--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
     <div class="container header__container">
       <div class="header__left">
         <h1>Our Services</h1>
-        <p>Explore the wide range of services we offer to meer all your online and stationary needs</p>
+        <p>Discover our comprehensive range of services designed to meet all your needs below</p>
       </div>
       <div class="header__right">
         <div class="header__right-image">
@@ -49,26 +49,62 @@
       <div class="categories__left">
         <h1>What we do</h1>
         <p>Pheliz Investment is a company that deals with online services and stationaries. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
-        <a href="#" class="btn">Learn More</a>
       </div>
       <div class="categories__right">
         <article class="category">
           <span class="category__icon"><i class="uil uil-globe"></i></span>
           <h4>Online Services</h4>
-          <p>Get the best of your online services with us. We are here to help you get the best of your online services: scanning and printing, online marketing, website development, and many more.</p>
+          <ul>
+            <li>Scanning and Printing</li>
+            <li>Web development</li>
+            <li>Software Installation</li>
+            <li>SEO Optimazation</li>
+          </ul>
         </article>
         <article class="category">
           <span class="category__icon"><i class="uil uil-pen"></i></span>
           <h4>Stationaries</h4>
-          <p>Get the best of your stationaries with us. We are here to help you get the best of your stationaries: pens, books, and many more.</p>
+          <ul>
+            <li>Pens, Pencils, and Erasers</li>
+            <li>Notebooks and Diaries</li>
+            <li>Office Supplies</li>
+            <li>Art and Craft Materials</li>
+            <li>School Supplies</li>
+          </ul>
         </article>
         <article class="category">
-          <span class="category__icon"><i class="uil uil-credit-card"></i></span>
-          <h4>Payment Services</h4>
-          <p>Get the best of your payment services with us. We are here to help you get the best of your payment services: Mpesa, Visa, and many more.</p>
-        </article>
+          <span class="category__icon"><i class="uil uil-globe"></i></span>
+          <h4>Software Installation & Upgrade</h4>
+          <ul>
+            <li>Operating Systems Installation</li>
+            <li>Database Management System</li>
+            <li>Programming Languages</li>
+            <li>Office and Productivity Softwares</li>
       </div>
     </div>
   </section>
+
+  <footer>
+    <p>&copy; Pheliz Investment 2024</p>
+  </footer>
+  
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="JavaScript/main.js"></script>
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 1,
+      spaceBetween: 30,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      breakpoints: {
+        600: {
+          slidesPerView: 2,
+        },
+      },
+    });
+  </script>
+  
 </body>
 </html>
