--- a/index.html
+++ b/index.html
@@ -45,34 +45,46 @@
     </div>
   </header>
 
-  <section class="categories">
+ <section class="categories">
     <div class="container categories__container">
-      <div class="category__left">
+      <div class="categories__left">
         <h1>What we do</h1>
         <p>Pheliz Investment is a company that deals with online services and stationaries. We are here to help you get the best of your online services and stationaries. Our offices are located at the heart of Kisumu CBD</p>
-        <a href="services.html" class="btn" id="learnMore">Learn More</a>
+        <a href="services.html" class="btn">View Services</a>
       </div>
       <div class="categories__right">
         <article class="category">
           <span class="category__icon"><i class="uil uil-globe"></i></span>
-          <h3>Online Services</h3>
-          <p>Get the best of your online services with us. We are here to help you get the best of your online services:
-            scanning and printing, online marketing, website development, and many more.
-          </p>
+          <h4>Online Services</h4>
+          <ul>
+            <li>Scanning and Printing</li>
+            <li>Web development</li>
+            <li>Software Installation</li>
+            <li>SEO Optimazation</li>
+          </ul>
         </article>
         <article class="category">
           <span class="category__icon"><i class="uil uil-pen"></i></span>
-          <h3>Stationaries</h3>
-          <p>Get the best of your stationaries with us. We are here to help you get the best of your stationaries</p>
+          <h4>Stationaries</h4>
+          <ul>
+            <li>Pens, Pencils, and Erasers</li>
+            <li>Notebooks and Diaries</li>
+            <li>Office Supplies</li>
+            <li>Art and Craft Materials</li>
+            <li>School Supplies</li>
+          </ul>
         </article>
         <article class="category">
-          <span class="category__icon"><i class="uil uil-credit-card"></i></span>
-          <h3>Software Installation</h3>
-          <p>We offer software Installation, development and bug detection services at the top notch</p>
-        </article>
+          <span class="category__icon"><i class="uil uil-globe"></i></span>
+          <h4>Software Installation & Upgrade</h4>
+          <ul>
+            <li>Operating Systems Installation</li>
+            <li>Database Management System</li>
+            <li>Programming Languages</li>
+            <li>Office and Productivity Softwares</li>
       </div>
     </div>
-  </section>
+  </section> 
 
   <section class="faqs">
     <h4>Frequently asked questions</h4>
