--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="login.html" id="login-btn">Login</a></li>
+        <li><a href="signup.html" id="signup-btn">Sign Up</a></li>
       </ul>
       <button id="open-menu-btn"><i class="uil uil-list-ul"></i></button>
       <button id="close-menu-btn"><i class="uil uil-times"></i></button>
