--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <article class="category">
           <span class="category__icon"><i class="uil uil-globe"></i></span>
           <h4>Online Services</h4>
-          <img src="images/online-services.jpg" alt="Online Services">
+          <img src="images/online-services.png" alt="Online Services">
           <ul>
             <li>Scanning and Printing</li>
             <li>Web development</li>
